# type-hints

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
content/: manifest.json
content/exercises/primitives.basic_type_hints/: data.json  exercise.pytxt  problem.en.md  problem.es.md  solution.py  validate.py
content/exercises/primitives.exercise1/: validate.py
content/exercises/primitives.optional_values/: data.json  exercise.pytxt  problem.en.md  problem.es.md  solution.py
docs/: architecture.md  cli.md  implementation.md  outline.md  roadmap.md
src/revex/: README.md  main.py
src/revex/cli/: __init__.py  commands.py  parser.py
src/revex/core/models/: __init__.py  config.py  errors.py  manifest.py  metadata.py  progress.py
src/revex/core/services/: config.py  constants.py  content.py  glow_helper.py  manifest.py  paths.py  progress.py  setup.py  sync.py
src/revex/core/validators/: __init__.py  ast_validator.py  pyright_validator.py  runner.py
src/revex/docs/: architecture.md  authoring_guide.md  cli.md  implementation.md  implementation_plan.md  milestone4_plan.md  models.md  roadmap.md
src/revex/models/: __init__.py  base.py  config.py  metadata.py  models.md
src/revex/services/: config.py  manifest.py  setup.py  sync.py
src/revex/validators/: pyright_validator.py
src/review/: README.md  main.py
src/review/models/: exercise.py  manifest.py  progress.py
src/review/services/: config.py  content.py  paths.py  progress.py  setup.py  sync.py
src/review/validators/: ast_validator.py
tests/: conftest.py  test_cli.py
(+2 files in other folders)
