[project]
name = "type-hints"
version = "0.1.0"
description = "An interactive CLI for learning Python type hints with automated feedback and progress tracking."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
revex = "revex.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/revex"]


[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
